add desert cards

--- a/frontend/src/components/Menu.module.css
+++ b/frontend/src/components/Menu.module.css
@@ -1,12 +1,12 @@
 .menu {
+  padding: 5px;
   display: flex;
   align-content: center;
   justify-content: center;
-  padding: 5px;
   background-color: #ff9a00;
 }
 
-nav a {
-  margin-right: 25px;
+.button {
   text-decoration: none;
+  margin-right: 25px;
 }
