--- a/frontend/src/components/UI/Button.module.css
+++ b/frontend/src/components/UI/Button.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   margin-left: 1px;
   cursor: pointer;
-  background-color: #ff9a00;
+  background-color: transparent;
   font-size: 1.9rem;
   padding: 3px 10px;
   border: none;
@@ -11,6 +11,6 @@
 
 .button:hover {
   background-color: #ffb440;
-  text-decoration: none;
+  text-decoration: underline solid;
   border-radius: 50%;
 }
