working at desserts card...

--- a/frontend/src/components/Menu.module.css
+++ b/frontend/src/components/Menu.module.css
@@ -3,7 +3,8 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  background-color: #ff9a00;
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
 
 .button {
