--- a/frontend/src/components/UI/Button.module.css
+++ b/frontend/src/components/UI/Button.module.css
@@ -7,10 +7,12 @@
   font-size: 1.9rem;
   padding: 3px 10px;
   border: none;
+  font-size: 2rem;
+  color: #420842;
 }
 
 .button:hover {
-  background-color: #ffb440;
+  background-color: #f9c5bd;
   text-decoration: underline solid;
   border-radius: 50%;
 }
