--- a/frontend/src/components/cards/DessertCard.css
+++ b/frontend/src/components/cards/DessertCard.css
@@ -1,21 +1,15 @@
 .dessert-card {
-  width: 250px;
-  height: 250px;
+  max-width: calc((100% - 20px) / 4);
   padding: 10px;
+  margin: 15px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
-  justify-content: center;
-
-  background-color: #ffb440;
-  border: 1px solid #a66400;
+  justify-content: space-between;
+  background-color: #f8e4a2;
+  border: 2px solid #460247;
   border-radius: 5%;
-  width: 50px;
-  height: 50px;
-  margin: 5px;
 }
 
-/* 
-  margin-bottom: 20px;
-  
-*/
+.img {
+  border-radius: 5%;
+}
