--- a/frontend/src/components/cards/DessertCards.css
+++ b/frontend/src/components/cards/DessertCards.css
@@ -1,5 +1,8 @@
 .dessert-cards {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  margin: 0 auto;
+  max-width: 1000px;
+  position: relative;
 }
