--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,5 +6,6 @@
 body {
   font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  background-color: #ffc873;
+  background-color: #fff5d7;
+  color: #140114;
 }
