--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -20,3 +20,18 @@
   font-size: 1.2rem;
   font-weight: 550;
 }
+
+@media screen and (max-width: 799px) {
+  .dinascard p {
+    padding: 20px;
+    font-size: 0.7rem;
+  }
+
+  .dinascard .img {
+    float: none;
+    padding-top: 5px;
+    width: 250px;
+    border-radius: 50%;
+    filter: drop-shadow(0 0 20px #f8e4a2);
+  }
+}
