--- a/frontend/src/components/Menu.module.css
+++ b/frontend/src/components/Menu.module.css
@@ -1,16 +1,27 @@
 .menu {
-  padding: 5px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  margin-top: 25px;
-  margin-bottom: 50px;
+  display: none;
 }
 
-.button {
-  text-decoration: none;
-  margin-right: 25px;
+@media screen and (min-width: 800px) {
+  .menu {
+    padding: 5px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-top: 25px;
+    margin-bottom: 50px;
+  }
+
+  .button {
+    text-decoration: none;
+    margin-right: 25px;
+  }
 }
 
-@media screen and (max-width: 799px) {
+@media screen and (min-width: 799px) {
+  .mobilemenu {
+    padding: 5px;
+    display: flex;
+    justify-content: right;
+  }
 }
