--- a/frontend/src/components/Menu.module.css
+++ b/frontend/src/components/Menu.module.css
@@ -2,7 +2,11 @@
   display: none;
 }
 
-@media screen and (min-width: 800px) {
+.mobilemenu {
+  display: none;
+}
+
+@media screen and (min-width: 750px) {
   .menu {
     padding: 5px;
     display: flex;
@@ -18,10 +22,10 @@
   }
 }
 
-@media screen and (min-width: 799px) {
+@media screen and (max-width: 750px) {
   .mobilemenu {
     padding: 5px;
     display: flex;
-    justify-content: right;
+    justify-content: left;
   }
 }
