--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -1,30 +1,17 @@
-.dinascard {
-  margin-top: 40px;
-  margin: 0 auto;
-  max-width: 800px;
-}
-
-.dinascard .img {
-  padding-top: 5px;
-  margin-right: 30px;
-  float: left;
-  width: 400px;
-  border-radius: 50%;
-  shape-outside: circle(50%);
-  filter: drop-shadow(0 0 20px #f8e4a2);
-}
-
-.dinascard p {
-  padding-top: 15px;
-  text-align: justify;
-  font-size: 1.2rem;
-  font-weight: 550;
-}
-
 @media screen and (max-width: 799px) {
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+  .dinascard {
+    margin-top: 40px;
+    margin: 0 auto;
+    max-width: 400px;
+  }
+
   .dinascard p {
-    padding: 20px;
-    font-size: 0.7rem;
+    padding: 10px;
+    font-size: 1.2rem;
   }
 
   .dinascard .img {
@@ -33,5 +20,84 @@
     width: 250px;
     border-radius: 50%;
     filter: drop-shadow(0 0 20px #f8e4a2);
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
+  .dinascard {
+    margin-top: 40px;
+    margin: 0 auto;
+    padding-top: 15px;
+    max-width: 800px;
+  }
+
+  .dinascard .img {
+    padding: 5px;
+    padding-top: 15px;
+    margin-right: 30px;
+    float: left;
+    width: 350px;
+    border-radius: 50%;
+    shape-outside: circle(50%);
+    filter: drop-shadow(0 0 20px #f8e4a2);
+  }
+
+  .dinascard p {
+    text-align: justify;
+    font-size: 1.2rem;
+    font-weight: 510;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+  .dinascard {
+    margin-top: 40px;
+    margin: 0 auto;
+    max-width: 800px;
+  }
+
+  .dinascard .img {
+    padding-top: 5px;
+    margin-right: 30px;
+    float: left;
+    width: 400px;
+    border-radius: 50%;
+    shape-outside: circle(50%);
+    filter: drop-shadow(0 0 20px #f8e4a2);
+  }
+
+  .dinascard p {
+    padding-top: 15px;
+    text-align: justify;
+    font-size: 1.2rem;
+    font-weight: 550;
+  }
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 1200px) {
+  .dinascard {
+    margin-top: 40px;
+    margin: 0 auto;
+    max-width: 800px;
+  }
+
+  .dinascard .img {
+    padding-top: 5px;
+    margin-right: 30px;
+    float: left;
+    width: 400px;
+    border-radius: 50%;
+    shape-outside: circle(50%);
+    filter: drop-shadow(0 0 20px #f8e4a2);
+  }
+
+  .dinascard p {
+    padding-top: 15px;
+    text-align: justify;
+    font-size: 1.2rem;
+    font-weight: 550;
   }
 }
