--- a/frontend/src/components/Menu.module.css
+++ b/frontend/src/components/Menu.module.css
@@ -21,12 +21,13 @@
 
   .activebtn {
     cursor: pointer;
-    background-color: transparent;
     font-size: 1.9rem;
     border: none;
     font-size: 1.1rem;
     color: #420842;
     font-weight: bold;
+    background-color: #f9c5bd;
+    border-radius: 50%;
   }
 }
 
@@ -54,12 +55,13 @@
 
   .activebtn {
     cursor: pointer;
-    background-color: transparent;
     font-size: 1.9rem;
     border: none;
     font-size: 1.1rem;
     color: #420842;
     font-weight: bold;
+    background-color: #f9c5bd;
+    border-radius: 50%;
   }
 }
 
@@ -86,10 +88,11 @@
   .activebtn {
     cursor: pointer;
     background-color: transparent;
-    border: none;
     font-size: 1.8rem;
     color: #420842;
     font-weight: bold;
+    background-color: #f9c5bd;
+    border-radius: 50%;
   }
 }
 
@@ -190,42 +193,3 @@
     border-radius: 50%;
   }
 }
-
-/*@media screen and (min-width: 750px) {
-  .menu {
-    padding: 5px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    margin-top: 25px;
-    margin-bottom: 50px;
-  }
-
-  .mobilemenu {
-    display: none;
-  }
-
-  .button {
-    text-decoration: none;
-    margin-right: 25px;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  .mobilemenu {
-    margin-top: 5px;
-    margin-bottom: 15px;
-    padding: 5px;
-    position: relative;
-    justify-content: left;
-  }
-
-  .openmenu {
-    display: flex;
-    justify-content: left;
-  }
-
-  .closedmenu {
-    display: none;
-  }
-}*/
