--- a/frontend/src/components/cards/NewsCard.css
+++ b/frontend/src/components/cards/NewsCard.css
@@ -1,26 +1,67 @@
-.news-card {
-  padding: 10px;
-  margin: 15px;
-  margin-bottom: 50px;
-  max-width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #f8e4a2;
-  border: 2px solid #460247;
-  border-radius: 5%;
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+  .news-card {
+    padding: 10px;
+    margin: 15px;
+    margin-bottom: 50px;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f8e4a2;
+    border: 2px solid #460247;
+    border-radius: 5%;
+  }
+
+  .pub-date {
+    margin-left: 45px;
+    margin-top: 30px;
+    display: flex;
+    justify-self: left;
+  }
+
+  .news-card .img {
+    margin: 0 auto;
+    margin-bottom: 25px;
+    max-width: 500px;
+    border-radius: 5%;
+  }
 }
 
-.pub-date {
-  margin-left: 45px;
-  margin-top: 30px;
-  display: flex;
-  justify-self: left;
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
 }
 
-.news-card .img {
-  margin: 0 auto;
-  margin-bottom: 25px;
-  max-width: 500px;
-  border-radius: 5%;
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 1200px) {
+  .news-card {
+    padding: 10px;
+    margin: 15px;
+    margin-bottom: 50px;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f8e4a2;
+    border: 2px solid #460247;
+    border-radius: 5%;
+  }
+
+  .pub-date {
+    margin-left: 45px;
+    margin-top: 30px;
+    display: flex;
+    justify-self: left;
+  }
+
+  .news-card .img {
+    margin: 0 auto;
+    margin-bottom: 25px;
+    max-width: 500px;
+    border-radius: 5%;
+  }
 }
