--- a/frontend/src/components/cards/NewsDetail.css
+++ b/frontend/src/components/cards/NewsDetail.css
@@ -63,17 +63,20 @@
     font-weight: bold;
     font-size: 1.5rem;
     margin-bottom: 10px;
+    color: #460247;
   }
 
   .news-text {
     font-size: 1.2rem;
     margin-bottom: 10px;
+    color: #460247;
   }
 
   .pub-date {
     margin-left: 15px;
     display: flex;
     justify-self: left;
+    color: #460247;
   }
 }
 
@@ -103,6 +106,7 @@
     font-weight: bold;
     font-size: 1.2rem;
     margin-bottom: 10px;
+    color: #460247;
   }
 
   .news-text {
