change color for a p

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,9 +3,10 @@
   font-family: Alegreya-SemiBold;
 }
 
-a {
+a,
+p {
   text-decoration: none;
-  color: #460247;
+  color: #140114;
 }
 
 @font-face {
