change color for a p

--- a/frontend/src/components/cards/Dessert.css
+++ b/frontend/src/components/cards/Dessert.css
@@ -10,6 +10,7 @@
     background-color: #f8e4a2;
     border: 2px solid #460247;
     border-radius: 5%;
+    color: #140114;
   }
 
   .dessert-item .img {
@@ -52,6 +53,7 @@
     background-color: #f8e4a2;
     border: 2px solid #460247;
     border-radius: 5%;
+    color: #140114;
   }
 
   .dessert-item .img {
