--- a/frontend/src/components/cards/DessertCard.css
+++ b/frontend/src/components/cards/DessertCard.css
@@ -1,7 +1,3 @@
-a {
-  text-decoration: none;
-}
-
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 320px) {
   .dessert-card {
@@ -14,6 +10,7 @@ a {
     background-color: #f8e4a2;
     border: 2px solid #460247;
     border-radius: 5%;
+    color: #140114;
   }
 
   .dessert-card .img {
@@ -54,6 +51,7 @@ a {
     background-color: #f8e4a2;
     border: 2px solid #460247;
     border-radius: 5%;
+    color: #140114;
   }
 
   .dessert-title {
